# darksouls3-mod

./: Cargo.toml  README.md  settings.json
.cargo/: config.toml
docs/: mod_ds3.ini
src/: d3d_proxy.rs  lib.rs  mod_config.rs
