[package]
name = "darksouls3-mod"
version = "0.1.0"
edition = "2024"


[dependencies.windows]
version = "0.62"
features = [
        "Win32_UI_WindowsAndMessaging",
        "Win32_UI_Input_KeyboardAndMouse",
        "Win32_Graphics_Direct3D",
        "Win32_Graphics_Direct3D_Fxc",
        "Win32_Graphics_Direct3D10",
        "Win32_System_SystemInformation",
        "Win32_System_SystemServices",
        "Win32_System_Threading",
        "Win32_System_LibraryLoader",
]

[lib]
name = "d3dcompiler_43"
crate-type = ["cdylib", "rlib"]


[dependencies]
ntapi = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serini = "0.2.2"
